Mostly Final Version

--- a/manual/faq.tex
+++ b/manual/faq.tex
@@ -4,7 +4,7 @@
 
 \section{I'm a patient. Is there a protected place for me to medicate?}
 
-Yes! The medical tent is located at the north end of stone village. 
+Yes! The medical tent is located at the north end of stone village.
 
 \section{I'm hungry! Where is the food?} %make sure this is updated at next core meeting!
  Food is located At:
@@ -18,7 +18,7 @@ Yes! The medical tent is located at the north end of stone village.
 \section{I'm thirsty! Where is the water?}
 \begin{itemize}
 	\item Closest water sales booth is located Just behind us.
-	\item No, I meant free water: H20 station next to ice truck on blueberry hill, or water fountain South of Dancesafe on Lunday way.
+	\item No, I meant free water: H20 station next to ice truck on Blueberry Hill..
 \end{itemize}
 
 
@@ -32,7 +32,7 @@ Yes, as far as we can tell!
 Stone Village.
 
 \section{When does Hempfest close?}
-Hempfest closes at 8 PM. The Sweep begins at the north end of the park at 7:30 PM
+Hempfest closes at 8 PM. The Sweep begins from the middle of the park at 7:30 PM
 
 \section{Where can I get official Hempfest swag?}
 \begin{itemize}
@@ -53,13 +53,13 @@ Sign up to volunteer at Staff Check in. No, you can only get a shirt if  you vol
 \end{itemize}
 
 \section{Is it safe to buy pot brownies at Hempfest?}
-No. They are illegal. They are also unpermitted food vending. If you see someone selling brownies, please report to police or Hempfest staff. 
+No. They are illegal. They are also unpermitted food vending. If you see someone selling brownies, please report to any HF staff with a radio or to HF security. 
 
 \section{Can I have a program?}
-Yes. We are asking for a ? dollar donation per program. 
+Yes. We are asking for a four dollar donation per program, unless you have already donated, then its one dollar. 
 
 \section{Where can I get a beer?}
-There is no alcohol at Hempfest. 
+There is NO alcohol at Hempfest. 
 
 \section{When is the free joint toss?}
 What joints? Marijauna is illegal! 
@@ -70,9 +70,8 @@ No, all the acts playing are in the schedule.
 \section{Where are the closest bathrooms?}
 Directly to the east on hwy 420.
 
-\section{What do I do if the police approach me?}
-You have rights, and a right to know them!
- %need to add actual content here, possible to get lit from somewhere? NORML?
+%\section{What do I do if the police approach me?}
+%need to add actual content here, possible to get lit from somewhere? NORML?
  
 \section{Can I camp here overnight?}
 NO, Camping is illegal in Seattle parks.
