--- a/manual/generalinfo.tex
+++ b/manual/generalinfo.tex
@@ -10,7 +10,7 @@ Hempfest is an Action Movie…Not a Drama.
 \end{quotation}
 
 \section{Overview of Information Booth}
-Hempfest Information is one the main public faces of Hempfest org at the event. We have a responsibility to provide timely and accurate information to all festival goers who visit us,along with a smile! The booth is located just north of james junction, south of munchie market. 
+Hempfest Information is one the main public faces of Hempfest org at the event. We have a responsibility to provide timely and accurate information to all festival goers who visit us,along with a smile! The booth is located north of the pumphouse between the paths. 
 
 \section{Hempfest Mission Statement}
 To educate the public on the myriad of potential benefits offered by the Cannabis plant, including the medicinal, industrial, agricultural, economic, environmental, and other benefits and applications. In particular, Seattle Hempfest seeks to advance the cause of Cannabis policy reform through education, while advancing the public image of the Cannabis advocate or enthusiast through example.
@@ -40,7 +40,7 @@ No: Pets (Dogs, Cats, Birds, etc.), Alcohol, Narcotics, Weapons, Camping, or Una
 \end{itemize}
 
 \section{Unauthorized vending}
-ALL  vendors must have a PASS. If someone asks about being a blanket vendor and they do not already have a pass, then we need to send them to vending to get one. 
+ALL  vendors must have a PASS. Please report unauthorized vending to security or any staff with a radio. 
 
 \section{Code of Conduct}
 All Info Booth staff MUST abide by the Hempfest Code of Conduct. PLEASE do not do anything illegal in your staff shirt! 
@@ -59,25 +59,26 @@ This is arguably THE most important job of the information booth. Hempfest relie
 	\item Don't forget to tell them, Hempfest Info sent you!
 \end{itemize}
 
-\section{Conflict Resolution}
 
-\section{What Hempfest offers to visitors}
-
-\section{Hemposium, and why its important}
+\section{Hemposium}
 Hempfest features an area and stage called the Hemposium that features exhibits, displays, demonstrations, panel discussions and featured speakers on the issues that include industrial hemp and its many uses. Hemposium is located just south of the staff compound. If a patron asks where they can find more information about Hemp and its many uses, please send them to Hemposium! 
 
 \section{Asking for donations}
-Hempfest is a non profit organization and produced by volunteers. Please consider asking all visitors to the information booth to drop a dollar or two into our donation bucket. It all goes back into the fest! We need the public's help to continue our message of freedom! 
+Hempfest is a non profit organization and produced by volunteers. Please consider asking all visitors to the information booth to drop a four dollar donation into our bucket. It all goes back into the fest! We need the public's help to continue our message of freedom! 
 
 \section{Voter Registration}
+Booth is located South of Hemposium. We also have forms at infobooth. 
 
 \section{Medical MJ Information}
-% www.cdc.coop/resources
+There are many patient and legal groups at Seattle Hempfest. Historically they have been centered near Stone Village. 
 
-\section{Don't just burn it, learn it! How we can further educate the public}
+\section{Lost and Found}
+Fill out lost item form, make sure you can read the contact information. Seperate items into clothing and other items. If cellphone, wallet, or keys, give to coord. 
 
-\section{Resources: Laws, cannabis reform, constitutional rights}
+%\section{Don't just burn it, learn it! How we can further educate the public}
 
-\section{Hempfest and the environment, what we are doing to be more responsible}
+%\section{Resources: Laws, cannabis reform, constitutional rights}
+
+%\section{Hempfest and the environment, what we are doing to be more responsible}
 
 
