--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -107,7 +107,7 @@
 
 \input{faq}
 \input{generalinfo}
-\input{lostandfound}
+%\input{lostandfound}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
