Final E-Version. Will fix up bad boxes for print.

--- a/manual/faq.tex
+++ b/manual/faq.tex
@@ -13,6 +13,7 @@ Yes! The medical tent is located at the north end of stone village.
 	\item Northern Bites, 225-228
 	\item Ganja Gardens, 219-224
 	\item Grubbin' Grove, 200-204
+	\item Bud Of Seattle
 \end{itemize}
 
 \section{I'm thirsty! Where is the water?}
@@ -32,12 +33,12 @@ Yes, as far as we can tell!
 Stone Village.
 
 \section{When does Hempfest close?}
-Hempfest closes at 8 PM. The Sweep begins from the middle of the park at 7:30 PM
+Hempfest closes at 8 PM. 
 
 \section{Where can I get official Hempfest swag?}
 \begin{itemize}
 	\item 420 Store, Just west of us, between 403 and 404.
-	\item Hempfest General Store, Just south of McWilliams Stage
+	\item Hempfest General Store, Just south of McWilliams Stage.
 \end{itemize}
 
 \section{How do I get a staff tshirt? Can I buy yours?}
@@ -53,7 +54,7 @@ Sign up to volunteer at Staff Check in. No, you can only get a shirt if  you vol
 \end{itemize}
 
 \section{Is it safe to buy pot brownies at Hempfest?}
-No. They are illegal. They are also unpermitted food vending. If you see someone selling brownies, please report to any HF staff with a radio or to HF security. 
+No. They are illegal. They are also unpermitted, unregulated food vending and can be dangerous to your health. If you see someone selling brownies, please report to any HF staff with a radio or to HF security. 
 
 \section{Can I have a program?}
 Yes. We are asking for a four dollar donation per program, unless you have already donated, then its one dollar. 
