--- a/manual/faq.tex
+++ b/manual/faq.tex
@@ -2,9 +2,9 @@
 
 %Each question is will be a \section{}
 
-\section{I'm a patient. Is there a protected place for me to medicate?}
+%\section{I'm a patient. Is there a protected place for me to medicate?}
 
-Yes! The medical tent is located at the north end of stone village.
+%Yes! A medical tent is located at the north end of stone village.
 
 \section{I'm hungry! Where is the food?} %make sure this is updated at next core meeting!
  Food is located At:
@@ -18,8 +18,9 @@ Yes! The medical tent is located at the north end of stone village.
 
 \section{I'm thirsty! Where is the water?}
 \begin{itemize}
-	\item Closest water sales booth is located Just behind us.
-	\item No, I meant free water: H20 station next to ice truck on Blueberry Hill..
+	\item South Info:Closest water sales booth is located Just behind us.
+	\item North Info:Closest water sales booth is located right next to us.
+	\item No, I meant free water: H20 station next to ice truck on Blueberry Hill, or the water fountain next to the happy hooker.
 \end{itemize}
 
 
@@ -37,8 +38,8 @@ Hempfest closes at 8 PM.
 
 \section{Where can I get official Hempfest swag?}
 \begin{itemize}
-	\item 420 Store, Just west of us, between 403 and 404.
-	\item Hempfest General Store, Just south of McWilliams Stage.
+	\item South Info: 420 Store, Just west of us, between 403 and 404.
+	\item North Info: Hempfest General Store, Just south of McWilliams Stage.
 \end{itemize}
 
 \section{How do I get a staff tshirt? Can I buy yours?}
@@ -49,7 +50,7 @@ Sign up to volunteer at Staff Check in. No, you can only get a shirt if  you vol
 	\item West side of hemposium
 	\item Just around corner from info booth, to the north
 	\item Just north of booth 529
-	\item Betwen McWilliams and Ganja Gardens
+	\item North of Ganja Gardens food area
 	\item South of Dancesafe, on Hwy 420
 \end{itemize}
 
@@ -57,7 +58,7 @@ Sign up to volunteer at Staff Check in. No, you can only get a shirt if  you vol
 No. They are illegal. They are also unpermitted, unregulated food vending and can be dangerous to your health. If you see someone selling brownies, please report to any HF staff with a radio or to HF security. 
 
 \section{Can I have a program?}
-Yes. We are asking for a four dollar donation per program, unless you have already donated, then its one dollar. 
+Yes. We are asking for a five dollar donation per program. 
 
 \section{Where can I get a beer?}
 There is NO alcohol at Hempfest. 
@@ -69,7 +70,10 @@ What joints? Marijauna is illegal!
 No, all the acts playing are in the schedule.
 
 \section{Where are the closest bathrooms?}
-Directly to the east on hwy 420.
+\begin{itemize}
+	\item South Info: Directly to the West on Lunday Way.
+	\item North Info: Just to the West of us near the bike corral.
+\end {itemize}
 
 %\section{What do I do if the police approach me?}
 %need to add actual content here, possible to get lit from somewhere? NORML?
@@ -81,7 +85,14 @@ NO, Camping is illegal in Seattle parks.
 1.5 miles! 
 
 \section{I need a band aid, I'm having a panic attack, I think I'm dying, where do I go?}
-First aid is located right next to the info booth. (If necessary, escort to booth!)
+If necessary, escort to booth!
+\begin{itemize}
+	\item South Info: First aid is located right next to the info booth. 
+	\item North Info: Located Just South and West of us, across from Dancesafe.
+\end{itemize}
+
+
+
 
 
 
