--- a/manual/generalinfo.tex
+++ b/manual/generalinfo.tex
@@ -28,25 +28,25 @@ No: Pets (Dogs, Cats, Birds, etc.), Alcohol, Narcotics, Weapons, Camping, or Una
 
 \section{Found Kids and Lost Parents}
 \begin{itemize}
-	\item 	 If you find a lost child or a parent who has lost a child, stay with the parent or kid and send someone else to find someone with a radio! Usually the person that they’re looking for re-appears at this point. If not, when the radio arrives report the child’s:
+	\item 	 If you find a lost child or a parent who has lost a child, stay with the parent or kid and send someone else to find someone with a radio!  Usually the person that they’re looking for re-appears at this point. If not, when the radio arrives report to Operations the child’s:
 \begin{itemize}
 	\item Name
 \item Age
 \item Description, including clothes
 \item Last location seen
 \end{itemize}
-\item Wait for further instructions from Operations. They might tell you to stay put but in general lost kids are taken to the Police, located at the Pumphouse, or the closest SPD officer.
+\item Wait for further instructions from Operations. The child/parent should stay in the spot where you encountered them for at least fifteen minutes.
 \item If the person that they’re looking for shows up before this cycle is complete, please report that the situation is clear to Operations – otherwise we’ll all be looking for this kid forever. This is a service that we reserve for parents and small children. We don’t have time to help people find their friends. However, if there appear to be extenuating circumstances or if a person appears to be highly distressed please contact Operations and request assistance.
 \end{itemize}
 
 \section{Unauthorized vending}
-ALL  vendors must have a PASS. Please report unauthorized vending to security or any staff with a radio. 
+ALL  vendors must have a PASS. There is no strolling vending! Vendors selling brownies must be immediately reported to Hempfest Safety Staff.  Please report unauthorized vending to security or any staff with a radio. 
 
 \section{Code of Conduct}
 All Info Booth staff MUST abide by the Hempfest Code of Conduct. PLEASE do not do anything illegal in your staff shirt! 
 
 \section{Keeping track of Info Booth visitors}
-If you are assigned to keep track of visitors to the info booth, please click only ONCE for each visitor. If someone asks a particular interesting question or you get a repeated question not on the FAQ list, please let the info booth coordinator know! 
+If someone asks a particularly interesting question or you get a repeated question not on the FAQ list, please let the info booth coordinator know! 
 
 \section{Finding Specific Vendors}
 This is arguably THE most important job of the information booth. Hempfest relies on our vendors! Our goal is to send every person who asks to the vendor they want to visit! 
@@ -64,7 +64,7 @@ This is arguably THE most important job of the information booth. Hempfest relie
 Hempfest features an area and stage called the Hemposium that features exhibits, displays, demonstrations, panel discussions and featured speakers on the issues that include industrial hemp and its many uses. Hemposium is located just south of the staff compound. If a patron asks where they can find more information about Hemp and its many uses, please send them to Hemposium! 
 
 \section{Asking for donations}
-Hempfest is a non profit organization and produced by volunteers. Please consider asking all visitors to the information booth to drop a four dollar donation into our bucket. It all goes back into the fest! We need the public's help to continue our message of freedom! 
+Hempfest is a non profit organization and produced by volunteers. Please consider asking all visitors to the information booth to drop a five dollar donation into our bucket. It all goes back into the fest! We need the public's help to continue our message of freedom! 
 
 \section{Voter Registration}
 Booth is located South of Hemposium. We also have forms at infobooth. 
