--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -90,6 +90,7 @@
 
 %% The simple version:
 \title{Hempfest Info Manual}
+\author{Talisha Lopez, Hempfest InfoQueen}
 %\date{} %%If commented, the current date is used.
 \maketitle
 
